--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,15 @@
+blinker==1.7.0
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.7
+cmake==3.29.0.1
+colorama==0.4.6
 Flask==3.0.3
+googlemaps==4.10.0
+idna==3.4
+itsdangerous==2.2.0
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+requests==2.31.0
+urllib3==2.0.4
+Werkzeug==3.0.2
