--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,13 @@ cmake==3.29.0.1
 colorama==0.4.6
 Flask==3.0.3
 googlemaps==4.10.0
+gunicorn==22.0.0
 idna==3.4
 itsdangerous==2.2.0
 Jinja2==3.1.3
 MarkupSafe==2.1.5
+packaging==24.0
+pygame==2.5.2
 requests==2.31.0
 urllib3==2.0.4
 Werkzeug==3.0.2
