--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,14 @@ gunicorn==22.0.0
 idna==3.4
 itsdangerous==2.2.0
 Jinja2==3.1.3
+joblib==1.4.0
 MarkupSafe==2.1.5
+numpy==1.26.4
 packaging==24.0
 pygame==2.5.2
 requests==2.31.0
+scikit-learn==1.4.2
+scipy==1.13.0
+threadpoolctl==3.5.0
 urllib3==2.0.4
 Werkzeug==3.0.2
