Added more requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+beautifulsoup4==4.12.3
 blinker==1.7.0
+bs4==0.0.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.7
@@ -15,12 +17,20 @@ MarkupSafe==2.1.5
 nltk==3.8.1
 numpy==1.26.4
 packaging==24.0
+pandas==2.2.2
+plotly==5.21.0
 pygame==2.5.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
 regex==2024.4.28
 requests==2.31.0
 scikit-learn==1.4.2
 scipy==1.13.0
+six==1.16.0
+soupsieve==2.5
+tenacity==8.2.3
 threadpoolctl==3.5.0
 tqdm==4.66.2
+tzdata==2024.1
 urllib3==2.0.4
 Werkzeug==3.0.2
